Third motion scene added to project, that one have custom color attribute

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -27,4 +27,9 @@
         android:name="com.piotrprus.motionlayoutplayground.fragments.SceneTwoFragment"
         android:label="fragment_scene_two"
         tools:layout="@layout/fragment_scene_two" />
+    <fragment
+        android:id="@+id/sceneThreeFragment"
+        android:name="com.piotrprus.motionlayoutplayground.fragments.SceneThreeFragment"
+        android:label="fragment_scene_three"
+        tools:layout="@layout/fragment_scene_three" />
 </navigation>
