Fifth motion scene added to project, scaling up and down during swipe

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -37,4 +37,9 @@
         android:name="com.piotrprus.motionlayoutplayground.fragments.SceneFourFragment"
         android:label="fragment_scene_four"
         tools:layout="@layout/fragment_scene_four" />
+    <fragment
+        android:id="@+id/sceneFiveFragment"
+        android:name="com.piotrprus.motionlayoutplayground.fragments.SceneFiveFragment"
+        android:label="fragment_scene_five"
+        tools:layout="@layout/fragment_scene_five" />
 </navigation>
