--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
 
     <color name="colorBlue">#0099FF</color>
     <color name="colorRed">#ff3333</color>
+    <color name="colorGreen">#00ff00</color>
     <color name="colorAutumnBrown">#ee732e</color>
 </resources>
