--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -57,4 +57,9 @@
         android:name="com.piotrprus.motionlayoutplayground.fragments.SceneEightFragment"
         android:label="fragment_scene_eight"
         tools:layout="@layout/fragment_scene_eight" />
+    <fragment
+        android:id="@+id/sceneNineFragment"
+        android:name="com.piotrprus.motionlayoutplayground.fragments.SceneNineFragment"
+        android:label="fragment_scene_nine"
+        tools:layout="@layout/fragment_scene_nine" />
 </navigation>
