--- a/app/src/main/res/layout/fragment_scene_03.xml
+++ b/app/src/main/res/layout/fragment_scene_03.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layoutDescription="@xml/ml_scene_six"
-    tools:context=".fragments.SceneSixFragment">
+    app:layoutDescription="@xml/ml_scene_03"
+    tools:context=".fragments.Scene03Fragment">
 
-    <ImageView
-        android:id="@+id/autumnLeafSceneSix"
-        android:layout_width="wrap_content"
+    <View
+        android:id="@+id/colorBoxSceneThree"
+        android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/autumn_leaf"/>
+        android:background="@color/colorBlue"/>
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
