--- a/app/src/main/res/layout/fragment_scene_04.xml
+++ b/app/src/main/res/layout/fragment_scene_04.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layoutDescription="@xml/ml_scene_five"
-    tools:context=".fragments.SceneFiveFragment">
+    app:layoutDescription="@xml/ml_scene_04"
+    tools:context=".fragments.Scene04Fragment">
 
     <View
-        android:id="@+id/colorBoxSceneFive"
+        android:id="@+id/colorBoxSceneFour"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@color/colorBlue" />
