--- a/app/src/main/res/layout/fragment_scene_05.xml
+++ b/app/src/main/res/layout/fragment_scene_05.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layoutDescription="@xml/ml_scene_three"
-    tools:context=".fragments.SceneThreeFragment">
+    app:layoutDescription="@xml/ml_scene_05"
+    tools:context=".fragments.Scene05Fragment">
 
     <View
-        android:id="@+id/colorBoxSceneThree"
+        android:id="@+id/colorBoxSceneFive"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@color/colorBlue"/>
+        android:background="@color/colorBlue" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
